# fastapi-tutorial-basic

./: pyproject.toml
src/app/: main.py
tests/: __init__.py  test_main.py
